// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTitle debe mostrar el componente con el nombre del producto 1`] = `
<div
  className="productCard undefined"
>
  <span
    className="productDescription undefined"
  >
    Coffee Mug - sin imagen
  </span>
</div>
`;

exports[`ProductTitle debe mostrar el componente correctamente con el título personalizado 1`] = `
<span
  className="productDescription undefined"
>
  Custom product
</span>
`;
